while/tests/valid/ListGenerator_Valid_3.while
int f([int] x) {
     return |x|;
}

void main() {
     [int] arr = [];
     print f(arr);
}
