while/tests/invalid-parsing/Parsing_Invalid_5.while
int f(int x) {
    int x = x;
    return x;
}